--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ google.client.authentication-scheme=query
 google.resource.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 google.resource.prefer-token-info=true
 
-spring.security.oauth2.client.registration.google.client-id=652673266838-6froqudbr9pgj0i10h38p3ou28i4ogcl.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=bwexBeykQvOd2ZZ9orBR9H2H
+spring.security.oauth2.client.registration.google.client-id=dummy
+spring.security.oauth2.client.registration.google.client-secret=dummy
 
 
 #facebook.client.client-id=
