Why aren't you working?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ google.client.authentication-scheme=query
 google.resource.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 google.resource.prefer-token-info=true
 
-spring.security.oauth2.client.registration.google.client-id=dummy
-spring.security.oauth2.client.registration.google.client-secret=dummy
+#spring.security.oauth2.client.registration.google.client-id=dummy
+#spring.security.oauth2.client.registration.google.client-secret=dummy
 
 
 #facebook.client.client-id=
@@ -40,3 +40,5 @@ spring.security.oauth2.client.registration.google.client-secret=dummy
 #facebook.client.client-authentication-scheme=form
 #facebook.client.scope=public_profile,email
 #facebook.resource.user-info-uri=https://graph.facebook.com/me
+
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
