--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,5 @@ google.resource.prefer-token-info=true
 #facebook.resource.user-info-uri=https://graph.facebook.com/me
 
 logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+
+logging.level.org.springframework.security.web=TRACE
