Login by multiple providers works (actually pretty cool).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,18 +17,11 @@ spring.datasource.initialization-mode=always
 spring.http.converters.preferred-json-mapper=gson
 
 
-google.client.client-id=652673266838-6froqudbr9pgj0i10h38p3ou28i4ogcl.apps.googleusercontent.com
-google.client.client-secret=bwexBeykQvOd2ZZ9orBR9H2H
-google.client.access-token-uri=https://www.googleapis.com/oauth2/v4/token
-google.client.user-authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-google.client.scope=openid,email,profile
-google.client.client-authentication-scheme=form
-google.client.authentication-scheme=query
-google.resource.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-google.resource.prefer-token-info=true
+oauth2.provider.google.client.client-id=652673266838-6froqudbr9pgj0i10h38p3ou28i4ogcl.apps.googleusercontent.com
+oauth2.provider.google.client.client-secret=bwexBeykQvOd2ZZ9orBR9H2H
 
-#spring.security.oauth2.client.registration.google.client-id=dummy
-#spring.security.oauth2.client.registration.google.client-secret=dummy
+oauth2.provider.github.client.client-id=a1c369741a42bdda51e9
+oauth2.provider.github.client.client-secret=a2e014587b889075172cc5e1f9eb684ef15ce117
 
 
 #facebook.client.client-id=
