Users are loaded from and registered in DB by e-mail address from the oauth responses.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ oauth2.provider.google.client.client-secret=bwexBeykQvOd2ZZ9orBR9H2H
 
 oauth2.provider.github.client.client-id=a1c369741a42bdda51e9
 oauth2.provider.github.client.client-secret=a2e014587b889075172cc5e1f9eb684ef15ce117
+oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
 
 #facebook.client.client-id=
