--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # shortcut for the "hibernate.hbm2ddl.auto" property
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test
