--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.open-in-view=false
+
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test
@@ -19,11 +21,6 @@ spring.datasource.initialization-mode=always
 spring.http.converters.preferred-json-mapper=gson
 
 
-oauth2.provider.google.client.client-id=652673266838-6froqudbr9pgj0i10h38p3ou28i4ogcl.apps.googleusercontent.com
-oauth2.provider.google.client.client-secret=bwexBeykQvOd2ZZ9orBR9H2H
-
-oauth2.provider.github.client.client-id=a1c369741a42bdda51e9
-oauth2.provider.github.client.client-secret=a2e014587b889075172cc5e1f9eb684ef15ce117
 oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
 
