--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # shortcut for the "hibernate.hbm2ddl.auto" property
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
 spring.jpa.open-in-view=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useLegacyDatetimeCode=false&serverTimezone=UTC
