--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,13 +26,14 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 #facebook.client.client-id=
 #facebook.client.client-secret=
 #facebook.client.access-token-uri=https://graph.facebook.com/oauth/access_token
-#facebook.client.user-authorization-uri=https://www.facebook.com/dialog/oauth
+#facebook.client.userAcc-authorization-uri=https://www.facebook.com/dialog/oauth
 #facebook.client.token-name=oauth_token
 #facebook.client.authentication-scheme=query
 #facebook.client.client-authentication-scheme=form
 #facebook.client.scope=public_profile,email
-#facebook.resource.user-info-uri=https://graph.facebook.com/me
+#facebook.resource.userAcc-info-uri=https://graph.facebook.com/me
 
-logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 
-logging.level.org.springframework.security.web=TRACE
+#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+#logging.level.org.springframework.security.web=TRACE
+logging.level.org.hibernate.SQL=debug
