--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.1.9.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.labosch</groupId>
-    <artifactId>csillagtura</artifactId>
+    <groupId>com.laboschcst</groupId>
+    <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>csillagtura</name>
-    <description>CST web</description>
+    <name>laboschcst.server</name>
+    <description>Server of CST web</description>
 
     <properties>
         <java.version>11</java.version>
