--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/labosch_cst?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test
 
@@ -34,6 +34,6 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 #facebook.resource.userAcc-info-uri=https://graph.facebook.com/me
 
 
-#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
 logging.level.org.hibernate.SQL=debug
