--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,9 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 #facebook.resource.userAcc-info-uri=https://graph.facebook.com/me
 
 
-logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+
+#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
 logging.level.org.hibernate.SQL=debug
+
+logging.level.com.laboschcst.server=TRACE
