--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,10 @@
         </dependency>
     </dependencies>
 
+    <packaging>jar</packaging>
+
     <build>
+        <finalName>laboschcst.server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
