--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/labosch_cst?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=test
-spring.datasource.password=test
-
 spring.datasource.data=classpath:/sql/testdata-import.sql
 
-
+secret.api-keys.file.location=secret/api-keys.properties
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
