--- a/src/main/resources/application-local_bare.properties
+++ b/src/main/resources/application-local_bare.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/labosch_cst?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test
+
+secret.api-keys.file.location=secret/api-keys.properties
