--- a/docker/Dockerfile-k8s_dev
+++ b/docker/Dockerfile-k8s_dev
@@ -2,14 +2,14 @@ FROM openjdk:11
 MAINTAINER "János Gats <gatsjanos@gmail.com>"
 
 ENV APP_HOME=/app
+ENV LOGGING_ENABLE_LOCALDEV_CONSOLE_APPENDER=true
 
 RUN mkdir -p ${APP_HOME}
-
-COPY target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
 
 WORKDIR ${APP_HOME}
 
 EXPOSE 30005
 EXPOSE 8080
 
+COPY target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
 CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschcst.server.jar"]
