--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
 #logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
-logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.SQL=debug
 
-logging.level.com.laboschcst.server=TRACE
+#logging.level.com.laboschcst.server=TRACE
