DB reached by ClusterIp in k8s cluster.

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://gjani.sch.bme.hu:3306/labosch_cst?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=test
-spring.datasource.password=test
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://db-cluster-ip:3306/labosch_cst?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootpw
 
 secret.api-keys.file.location=/app/secret/api-keys.properties
