Secret loading works cool now, as custom property loading.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,6 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 #logging.level.org.hibernate.SQL=debug
 
 #logging.level.com.laboschcst.server=TRACE
+
+#logging.level.org=debug
+#logging.level.com=debug
