--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.janosgats.logging</groupId>
+            <artifactId>flexible-appender</artifactId>
+            <version>1.0.6</version>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
