Getting ready for react frontend.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
+#server.servlet.contextPath=/server TODO: Turn this on, when react frontend is ready!
+
 spring.datasource.data=classpath:/sql/testdata-import.sql
 
 spring.session.jdbc.initialize-schema=always
