--- a/docker/Dockerfile-k8s_dev
+++ b/docker/Dockerfile-k8s_dev
@@ -12,6 +12,6 @@ EXPOSE 30005
 EXPOSE 8080
 
 COPY target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
-COPY dbconfig/ ${APP_HOME}/dbconfig/
+COPY dbconfig/dbconfig-k8s_dev.properties ${APP_HOME}/dbconfig/dbconfig.properties
 
 CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschcst.server.jar"]
