Better Api error handling. Using Jackson, serializing hell and Dtos.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.main.banner-mode=off
 spring.jpa.open-in-view=false
-
-spring.http.converters.preferred-json-mapper=gson
 
 oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
