--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
 #server.servlet.contextPath=/server TODO: Turn this on, when react frontend is ready!
@@ -8,9 +9,6 @@ spring.datasource.data=classpath:/sql/testdata-import.sql
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
 spring.datasource.initialization-mode=always
-
-
-spring.http.converters.preferred-json-mapper=gson
 
 
 oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
