Added language to travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-sudo: required
-service:
+language: java
+services:
   - docker
 cache:
   directories:
     - /root/.m2/repository
+
 before_install:
   - docker build -t gjani/laboschcst-server -f docker/Dockerfile-k8s_dev-travis_build .
