--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ cache:
     - $HOME/.m2
 
 before_install:
-  - docker build -t gjani/laboschcst-server -f docker/Dockerfile-k8s_dev-travis_build .
+  - docker build -t gjani/laboschcst-server -v $HOME/.m2:/root/.m2/repository -f docker/Dockerfile-k8s_dev-travis_build .
