--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ os: linux
 language: java
 services:
   - docker
-cache:
-  directories:
-    - $HOME/.m2
 
 before_install:
-  - docker build -t gjani/laboschcst-server -v $HOME/.m2:/root/.m2/repository -f docker/Dockerfile-k8s_dev-travis_build .
+  - docker build -t gjani/laboschcst-server -f docker/Dockerfile-k8s_dev-travis_build .
