--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,3 +1,3 @@
 spring.jpa.hibernate.ddl-auto=update
 
-secret.api-keys.file.location=/app/api_keys/api-keys.properties
+secret.secrets.file.location=/app/secret/secrets.properties
