--- a/docker/Dockerfile-k8s_dev-travis_build
+++ b/docker/Dockerfile-k8s_dev-travis_build
@@ -26,7 +26,7 @@ HEALTHCHECK --interval=15s \
 
 EXPOSE 30005
 EXPOSE 8080
-CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschcst.server.jar"]
+CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev", "laboschcst.server.jar"]
 
 COPY --from=builder_image --chown=spring-user:spring-user /app/target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
 USER spring-user
