--- a/docker/Dockerfile-k8s_dev
+++ b/docker/Dockerfile-k8s_dev
@@ -1,10 +1,11 @@
 FROM openjdk:11
 MAINTAINER "János Gats <gatsjanos@gmail.com>"
 
-ENV APP_HOME=/app
+ENV APP_HOME=/home/spring-user/app
 ENV LOGGING_ENABLE_LOCALDEV_CONSOLE_APPENDER=true
 
-RUN mkdir -p ${APP_HOME}
+RUN groupadd -g 10001 spring-user && \
+    useradd -m -u 10001 -g spring-user spring-user
 
 WORKDIR ${APP_HOME}
 
@@ -18,4 +19,6 @@ EXPOSE 30005
 EXPOSE 8080
 CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschcst.server.jar"]
 
-COPY target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
+COPY --chown=spring-user:spring-user target/laboschcst.server.jar ${APP_HOME}/laboschcst.server.jar
+
+USER spring-user
