--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
-#server.servlet.contextPath=/server TODO: Turn this on, when react frontend is ready!
+#server.servlet.contextPath=/server #TODO: Turn this on, when react frontend is ready!
 
 spring.datasource.data=classpath:/sql/testdata-import.sql
 
