--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ services:
 
 before_install:
   - docker build -t gjani/laboschcst-server -f docker/Dockerfile-k8s_dev-travis_build .
+
+install:
+  - /bin/true
