Working on travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,5 @@ services:
 before_install:
   - docker build -t gjani/laboschcst-server -f docker/Dockerfile-k8s_dev-travis_build .
 
-install:
-  - ""
-
+install: skip
 script: skip
