--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,3 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 
 secret.secrets.file.location=/app/secret/secrets.properties
+
+server.servlet.session.timeout=600m
