Added docker login.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - IMAGE_NAME_CACHE_BUILDER=gjani/laboschqpa-server:builder
   - IMAGE_NAME_CACHE_FINAL=gjani/laboschqpa-server
   - docker build --target=builder_image -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
