--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,21 @@ before_install:
   - IMAGE_NAME_CACHE_FINAL=${DOCKER_USERNAME}/laboschqpa-server
   - IMAGE_NAME_TAG=${DOCKER_USERNAME}/laboschqpa-server:$(date -u +%Y%m%d-%H%M%S)_${SHORT_COMMIT_HASH}
 
-  - docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
-  - docker pull ${IMAGE_NAME_CACHE_FINAL} || true
+jobs:
+  include:
+    - stage: DockerPull
+    - script: docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
+    - script: docker pull ${IMAGE_NAME_CACHE_FINAL} || true
+    - stage: DockerBuildCache
+    - script: docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
+    - stage: DockerBuildFinal
+    - script: docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_TAG} -f docker/Dockerfile-k8s_dev-travis_build .
+    - stage: DockerPush
+    - script: docker push ${IMAGE_NAME_CACHE_BUILDER}
+    - script: docker push ${IMAGE_NAME_CACHE_FINAL}
+    - script: docker push ${IMAGE_NAME_TAG}
+    - stage: DeployToKSZK
+    - script: sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && ./pipeline/deploy-to-kszk.sh || echo Skipping deploy to KSZK."
 
-  - docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
-  - docker push ${IMAGE_NAME_CACHE_BUILDER}
-  - docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_TAG} -f docker/Dockerfile-k8s_dev-travis_build .
-  - docker push ${IMAGE_NAME_CACHE_FINAL}
-  - docker push ${IMAGE_NAME_TAG}
-
-install:
-  - sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && ./pipeline/deploy-to-kszk.sh || echo Skipping deploy to KSZK."
+install: skip
 script: skip
