--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,8 @@ before_install:
 
 jobs:
   include:
-    - stage: DockerPull
-    - script: docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
-    - script: docker pull ${IMAGE_NAME_CACHE_FINAL} || true
-    - stage: DockerBuildCache
-    - script: docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
-    - stage: DockerBuildFinal
-    - script: docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_TAG} -f docker/Dockerfile-k8s_dev-travis_build .
-    - stage: DockerPush
-    - script: docker push ${IMAGE_NAME_CACHE_BUILDER}
-    - script: docker push ${IMAGE_NAME_CACHE_FINAL}
-    - script: docker push ${IMAGE_NAME_TAG}
+    - stage: DockerBuild
+    - script: ./pipeline/stages/docker-build.sh
     - stage: DeployToKSZK
     - script: sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && ./pipeline/deploy-to-kszk.sh || echo Skipping deploy to KSZK."
 
