--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,13 @@ services:
   - docker
 env:
   - $DEPLOY_TO_KSZK=false
-  - $SHORT_COMMIT_HASH=${TRAVIS_COMMIT::7}
-  - $IMAGE_NAME_CACHE_BUILDER=${DOCKER_USERNAME}/laboschqpa-server:builder
-  - $IMAGE_NAME_CACHE_FINAL=${DOCKER_USERNAME}/laboschqpa-server
-  - $IMAGE_NAME_TAG=${DOCKER_USERNAME}/laboschqpa-server:$(date -u +%Y%m%d-%H%M%S)_${SHORT_COMMIT_HASH}
 
 jobs:
   include:
     - stage: DockerBuild
-    - script: ./pipeline/stages/docker-build.sh
+      script: ./pipeline/stages/docker-build.sh
     - stage: DeployToKSZK
-    - script: sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && ./pipeline/deploy-to-kszk.sh || echo Skipping deploy to KSZK."
+      script: sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && ./pipeline/deploy-to-kszk.sh || echo Skipping deploy to KSZK."
 
 install: skip
 script: skip
