Travis is dumb.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,24 @@ services:
 env:
   - $DEPLOY_TO_KSZK=false
 
-jobs:
-  include:
-    - stage: DockerBuild
-      script: chmod +x ./pipeline/stages/docker-build.sh && ./pipeline/stages/docker-build.sh
-    - stage: DeployToKSZK
-      script: sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && (chmod +x ./pipeline/stages/deploy-to-kszk.sh && ./pipeline/stages/deploy-to-kszk.sh ) || echo Skipping deploy to KSZK."
+before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::7}
+
+  - IMAGE_NAME_CACHE_BUILDER=${DOCKER_USERNAME}/laboschqpa-server:builder
+  - IMAGE_NAME_CACHE_FINAL=${DOCKER_USERNAME}/laboschqpa-server
+  - IMAGE_NAME_TAG=${DOCKER_USERNAME}/laboschqpa-server:$(date -u +%Y%m%d-%H%M%S)_${SHORT_COMMIT_HASH}
+
+  - docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
+  - docker pull ${IMAGE_NAME_CACHE_FINAL} || true
+
+  - docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
+  - docker push ${IMAGE_NAME_CACHE_BUILDER}
+  - docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_TAG} -f docker/Dockerfile-k8s_dev-travis_build .
+  - docker push ${IMAGE_NAME_CACHE_FINAL}
+  - docker push ${IMAGE_NAME_TAG}
+
+  - sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && (chmod +x ./pipeline/deploy-to-kszk.sh && ./pipeline/deploy-to-kszk.sh ) || echo Skipping deploy to KSZK."
 
 install: skip
 script: skip
