--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,10 @@ jobs:
         - docker push ${IMAGE_NAME_TAG}
 
     - stage: DeployToKSZK
+      if: "$DEPLOY_TO_KSZK" = "true"
       script: skip
       before_install:
         - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::7}
         - IMAGE_NAME_TAG=${DOCKER_USERNAME}/laboschqpa-server:$(date -u +%Y%m%d-%H%M%S)_${SHORT_COMMIT_HASH}
       install:
-        - sh -c "[ \"$DEPLOY_TO_KSZK\" = \"true\" ] && (chmod +x ./pipeline/deploy-to-kszk.sh && ./pipeline/deploy-to-kszk.sh ) || echo Skipping deploy to KSZK."
+        - echo "Test message install"
