--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 os: linux
 language: java
-env:
-  - $DEPLOY_TO_KSZK=true
+#env:
+#  - $DEPLOY_TO_KSZK=true
 
 install: skip
 script: skip
@@ -30,8 +30,8 @@ jobs:
         - docker push ${IMAGE_NAME_TAG}
 
     - stage: DeployToKSZK
-      if: branch = master
-      #if: env(DEPLOY_TO_KSZK) = "true"
+#      if: branch = master
+      if: env(DEPLOY_TO_KSZK) = "true"
       script: skip
       before_install:
         - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::7}
