--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,23 @@ jobs:
         - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::7}
         - IMAGE_NAME_TAG=${DOCKER_USERNAME}/laboschqpa-server:$(date -u +%Y%m%d-%H%M%S)_${SHORT_COMMIT_HASH}
       install:
-        - echo "Test message install"
+        - echo "Installing kubectl"
+        - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/$(uname | awk '{print tolower($0)}')/amd64/kubectl
+        - chmod +x ./kubectl
+        - sudo mv ./kubectl /usr/local/bin/kubectl
+
+        - echo "Configuring kubectl"
+        - echo $KSZK_SECRET_CA > ca-KSZK.pem
+        - kubectl config set-cluster KSZK --server=https://api.k8s.sch.bme.hu --certificate-authority=ca-KSZK.pem
+        - kubectl config set-credentials $KSZK_SECRET_SCH_ACCOUNT  \
+          --auth-provider=oidc  \
+          --auth-provider-arg=idp-issuer-url=https://auth.k8s.sch.bme.hu/  \
+          --auth-provider-arg=client-id=oidc-auth-client  \
+          --auth-provider-arg=client-secret=$KSZK_SECRET_AUTH_PROVIDER_CLIENT_SECRET \
+          --auth-provider-arg=refresh-token=$KSZK_SECRET_AUTH_PROVIDER_REFRESH_TOKEN \
+          --auth-provider-arg=id-token=$KSZK_SECRET_AUTH_PROVIDER_ID_TOKEN
+        - kubectl config set-context KSZK --cluster=KSZK --user=$KSZK_SECRET_SCH_ACCOUNT
+        - kubectl config use-context KSZK
+
+        - echo "Starting deployment"
+        - kubectl -n=csillagtura-sch-bme-hu get secrets
