--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ jobs:
         - IMAGE_NAME_CACHE_BUILDER=${DOCKER_USERNAME}/laboschqpa-server:builder
         - IMAGE_NAME_CACHE_FINAL=${DOCKER_USERNAME}/laboschqpa-server
       install:
-        - ( docker pull ${IMAGE_NAME_CACHE_BUILDER} || true ) & ( docker pull ${IMAGE_NAME_CACHE_FINAL} || true ) & wait
+        - docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
+        - docker pull ${IMAGE_NAME_CACHE_FINAL} || true
 
         - docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
         - docker push ${IMAGE_NAME_CACHE_BUILDER}
