Start commands are overwritten by the k8s config.

--- a/docker/Dockerfile-k8s_dev-travis_build
+++ b/docker/Dockerfile-k8s_dev-travis_build
@@ -25,7 +25,7 @@ HEALTHCHECK --interval=15s \
             --timeout=5s \
             CMD curl --fail http://localhost:8080 || exit 1
 
-CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev", "laboschqpa.server.jar"]
+#CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev", "laboschqpa.server.jar"]
 
 COPY --from=builder_image --chown=spring-user:spring-user /app/target/laboschqpa.server.jar ${APP_HOME}/laboschqpa.server.jar
 USER spring-user
