--- a/docker/Dockerfile-k8s_dev
+++ b/docker/Dockerfile-k8s_dev
@@ -17,7 +17,7 @@ HEALTHCHECK --interval=15s \
 
 EXPOSE 30005
 EXPOSE 8080
-CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschqpa.server.jar"]
+#CMD ["java", "-jar", "-Dspring.profiles.active=k8s_dev",  "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:30005", "laboschqpa.server.jar"]
 
 COPY --chown=spring-user:spring-user target/laboschqpa.server.jar ${APP_HOME}/laboschqpa.server.jar
 
