--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,3 +1,7 @@
+server.tomcat.accept-count=150
+server.tomcat.max-threads=150
+server.tomcat.min-spare-threads=20
+
 spring.jpa.hibernate.ddl-auto=update
 
 secret.secrets.file.location=/app/secret/secrets.properties
