--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
 #logging.level.org=debug
 #logging.level.com=debug
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
