Spring security auth and filterchain overhaul.

--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -8,4 +8,4 @@ secret.secrets.file.location=/app/secret/secrets.properties
 
 server.servlet.session.timeout=600m
 
-email.links.baseUrl=localhost
+email.links.baseUrl=cst.k8s.sch.bme.hu
