--- a/src/main/resources/application-nodocker.properties
+++ b/src/main/resources/application-nodocker.properties
@@ -1,3 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 
 secret.secrets.file.location=secret/secrets-nodocker.properties
+
+email.links.baseUrl=localhost:8080
