--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
 
 
 
-#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
 #logging.level.org.hibernate.SQL=debug
 
