--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,5 @@ spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
 oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
+
+email.links.baseUrl=localhost
