Registration by Email works. Spring config overhaul.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
 spring.datasource.initialization-mode=always
 
-
-oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
+apiClient.github.baseUrl=https://api.github.com
+apiClient.github.oauth2ResourceUserInfo.url=/user
 
 
 #facebook.client.client-id=
