--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
-oauth2.provider.github.resource.user-info-uri=https://api.github.com/user
+apiClient.github.baseUrl=https://api.github.com
+apiClient.github.oauth2ResourceUserInfo.url=/user
 
 email.links.baseUrl=localhost
