Added StatsD Client.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,7 @@ apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
 
 email.links.baseUrl=localhost
+
+appconfig.statsd.prefix=server
+appconfig.statsd.host=graphite-cluster-ip
+appconfig.statsd.port=8125
