--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.timgroup</groupId>
+            <artifactId>java-statsd-client</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
     <packaging>jar</packaging>
 
