--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ apiClient.github.oauth2ResourceUserInfo.url=/user
 
 
 
-logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+#logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
 #logging.level.org.hibernate.SQL=debug
 
