Tomcat param tweaking.

--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -1,6 +1,7 @@
-server.tomcat.accept-count=500
-server.tomcat.max-threads=500
-server.tomcat.min-spare-threads=80
+server.tomcat.max-connections=3000
+server.tomcat.accept-count=100
+server.tomcat.max-threads=200
+server.tomcat.min-spare-threads=50
 
 spring.jpa.hibernate.ddl-auto=update
 
