--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -1,7 +1,7 @@
-server.tomcat.max-connections=3000
-server.tomcat.accept-count=100
-server.tomcat.max-threads=200
-server.tomcat.min-spare-threads=50
+#server.tomcat.max-connections=3000
+#server.tomcat.accept-count=100
+#server.tomcat.max-threads=200
+#server.tomcat.min-spare-threads=50
 
 spring.jpa.hibernate.ddl-auto=update
 
