--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -1,7 +1,7 @@
-server.tomcat.max-connections=30000
-server.tomcat.accept-count=3000
-server.tomcat.max-threads=3000
-server.tomcat.min-spare-threads=600
+#server.tomcat.max-connections=30000
+#server.tomcat.accept-count=3000
+#server.tomcat.max-threads=3000
+#server.tomcat.min-spare-threads=600
 
 spring.jpa.hibernate.ddl-auto=update
 
