--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
             <artifactId>java-statsd-client</artifactId>
             <version>3.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
     <packaging>jar</packaging>
 
