--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,15 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=*
 appconfig.statsd.prefix=server
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
+management.metrics.export.graphite.tags-as-prefix=statsdPrefix
+management.metrics.export.statsd.host=graphite-cluster-ip
+management.metrics.export.statsd.port=8125
+
+
+
