--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,11 @@ apiClient.github.oauth2ResourceUserInfo.url=/user
 
 email.links.baseUrl=localhost
 
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=*
 appconfig.statsd.prefix=server
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
+management.metrics.export.graphite.tags-as-prefix=statsdPrefix
+management.metrics.export.statsd.host=graphite-cluster-ip
+management.metrics.export.statsd.port=8125
