Changing metrics statsD flavor to etsy.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,6 @@ appconfig.statsd.port=8125
 management.metrics.export.graphite.tags-as-prefix=statsdPrefix
 management.metrics.export.statsd.host=graphite-cluster-ip
 management.metrics.export.statsd.port=8125
-
+management.metrics.export.statsd.flavor=etsy
 
 
