--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,4 @@ appconfig.statsd.port=8125
 management.metrics.export.graphite.tags-as-prefix=statsdPrefix
 management.metrics.export.statsd.host=graphite-cluster-ip
 management.metrics.export.statsd.port=8125
+management.metrics.export.statsd.flavor=etsy
