--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,9 +44,11 @@ management.endpoints.web.exposure.include=*
 appconfig.statsd.prefix=server
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
-management.metrics.export.graphite.tags-as-prefix=statsdPrefix
-management.metrics.export.statsd.host=graphite-cluster-ip
-management.metrics.export.statsd.port=8125
-management.metrics.export.statsd.flavor=etsy
+management.metrics.export.graphite.tags-as-prefix=graphitePrefix
+management.metrics.export.graphite.host=graphite-cluster-ip
+management.metrics.export.graphite.port=2004
+#management.metrics.export.statsd.host=graphite-cluster-ip
+#management.metrics.export.statsd.port=8125
+#management.metrics.export.statsd.flavor=etsy
 
 
