--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+appName=server
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
@@ -41,10 +43,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
-appconfig.statsd.prefix=server
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
-management.metrics.export.graphite.tags-as-prefix=graphitePrefix
+management.metrics.export.graphite.tags-as-prefix=appName,actuatorTag
 management.metrics.export.graphite.host=graphite-cluster-ip
 management.metrics.export.graphite.port=2004
 #management.metrics.export.statsd.host=graphite-cluster-ip
