Set actuator graphite export step interval to 10s.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,7 @@ appconfig.statsd.port=8125
 management.metrics.export.graphite.tags-as-prefix=appName,actuatorTag
 management.metrics.export.graphite.host=graphite-cluster-ip
 management.metrics.export.graphite.port=2004
+management.metrics.export.graphite.step=10s
 #management.metrics.export.statsd.host=graphite-cluster-ip
 #management.metrics.export.statsd.port=8125
 #management.metrics.export.statsd.flavor=etsy
