--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,5 @@
+appName=server
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
@@ -12,7 +14,7 @@ management.endpoints.web.exposure.include=*
 appconfig.statsd.prefix=server
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
-management.metrics.export.graphite.tags-as-prefix=statsdPrefix
+management.metrics.export.graphite.tags-as-prefix=appName,actuatorPrefix
 management.metrics.export.statsd.host=graphite-cluster-ip
 management.metrics.export.statsd.port=8125
 management.metrics.export.statsd.flavor=etsy
