Disabling actuator export to statsd.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ management.endpoints.web.exposure.include=*
 appconfig.statsd.host=graphite-cluster-ip
 appconfig.statsd.port=8125
 management.metrics.export.graphite.tags-as-prefix=appName,actuatorPrefix
+management.metrics.export.graphite.enabled=false
 management.metrics.export.graphite.host=graphite-cluster-ip
 management.metrics.export.graphite.port=2004
 management.metrics.export.graphite.step=10s
