Increased HikariCP pool size.

--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -3,6 +3,9 @@ server.tomcat.accept-count=300
 server.tomcat.max-threads=200
 server.tomcat.min-spare-threads=20
 
+spring.datasource.hikari.maximum-pool-size=200
+spring.datasource.hikari.minimum-idle=20
+
 spring.jpa.hibernate.ddl-auto=update
 
 secret.secrets.file.location=/app/secret/secrets.properties
