UGC does not differentiate between originalUser and currentUser.

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,3 +1,5 @@
+logging.config=classpath:log4j2-dev.xml
+
 server.tomcat.accept-count=150
 server.tomcat.max-threads=150
 server.tomcat.min-spare-threads=20
