Attachments should work (except for NewsPost).

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,8 +6,12 @@ spring.jpa.open-in-view=false
 
 apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
+apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
+apiClient.fileHost.indexedFileInfo.url=/api/fileInfo/indexedFileInfo
 
 email.links.baseUrl=localhost
+
+auth.interservice.key=asd
 
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
