--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.initialization-mode=always
 
 apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
+apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
+apiClient.fileHost.indexedFileInfo.url=/api/fileInfo/indexedFileInfo
 
 
 #facebook.client.client-id=
