--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,16 @@ jobs:
       before_install:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
-        - IMAGE_NAME_CACHE_BUILDER=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:builder
+#        - IMAGE_NAME_CACHE_BUILDER=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:builder
         - IMAGE_NAME_CACHE_FINAL=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}
       install:
-        - docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
+#        - docker pull ${IMAGE_NAME_CACHE_BUILDER} || true
         - docker pull ${IMAGE_NAME_CACHE_FINAL} || true
 
-        - docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
-        - docker push ${IMAGE_NAME_CACHE_BUILDER}
-        - docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_COMMIT} -t ${IMAGE_NAME_BRANCH} -f docker/Dockerfile-k8s_dev-travis_build .
+#        - docker build --target=builder_image --cache-from ${IMAGE_NAME_CACHE_BUILDER} -t ${IMAGE_NAME_CACHE_BUILDER} -f docker/Dockerfile-k8s_dev-travis_build .
+#        - docker push ${IMAGE_NAME_CACHE_BUILDER}
+#        - docker build --cache-from ${IMAGE_NAME_CACHE_BUILDER} --cache-from ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_COMMIT} -t ${IMAGE_NAME_BRANCH} -f docker/Dockerfile-k8s_dev-travis_build .
+        - docker build -t ${IMAGE_NAME_CACHE_FINAL} -t ${IMAGE_NAME_COMMIT} -t ${IMAGE_NAME_BRANCH} -f docker/Dockerfile-k8s_dev-travis_build .
         - docker push ${IMAGE_NAME_CACHE_FINAL}
         - docker push ${IMAGE_NAME_COMMIT}
         - docker push ${IMAGE_NAME_BRANCH}
