NewsPost endpoints use proper DTOs.

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 secret.secrets.file.location=/app/secret/secrets.properties
 
-server.servlet.session.timeout=600m
+server.servlet.session.timeout=1000h
 
 email.links.baseUrl=localhost
